--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -4,6 +4,7 @@ $primary-color: #7e3ff2;
 $secondary-color: #1d1d1d;
 $tertiary-color: #757575;
 
+$light-color: #ffffff;
 $body-color: #ffffff;
 $bg-color: #f4f4f4;
 $bg-color-deep: #e6e5e5;
