supplier profile completed

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -6,3 +6,4 @@
 @forward "../pages/myCart" ;
 @forward "../pages/listingForm" ;
 @forward "../pages/userProfile" ;
+@forward "../pages/suppilerProfile" ;
