mobile friendly nav

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -7,3 +7,4 @@
 @forward "../pages/listingForm" ;
 @forward "../pages/userProfile" ;
 @forward "../pages/suppilerProfile" ;
+@forward "../pages/wishlist" ;
