--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,9 +36,11 @@
 
 // nav bottom
 .nav-bottom{
-    border-top: 1px solid $bg-color;
+    border-top: 1px solid lighten($color: $secondary-color, $amount: 77) !important;
     height: 2.8rem !important;
     margin-left: -2.5rem ;
+    // box-shadow: 0px -2px 3px  lighten($color: $secondary-color, $amount: 77);
+
     .active{
         border-top: 2px solid $primary-color;
         padding: .6rem 0rem;
